<resources>
    <string name="app_name">CountriesApp</string>

    <string name="name">Name:</string>
    <string name="region">Region:</string>
    <string name="capital">Capital:</string>
    <string name="currency">Currency:</string>
    <string name="time_zone">Time Zone:</string>

    <!--ERROR-->
    <string name="error_connect">Check internet connection</string>

    <!--CONTENT DESCRIPTION-->
    <string name="cd_icon_country">Icon country</string>
    <string name="cd_update">Update</string>


</resources>