<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="country"
            type="com.most4dev.countriesapp.domain.entity.CountriesLong" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.CountryItemFragment">

        <ProgressBar
            android:id="@+id/progress_load_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/icon_country"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/cd_icon_country"
                app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:loadIcon="@{country.flags.png}" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

            <TextView
                android:id="@+id/tv_name_label"
                style="@style/TextViewLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_15" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextViewData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{country.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_15"
                tools:text="USA" />

            <TextView
                android:id="@+id/tv_region_label"
                style="@style/TextViewLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/region"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_label" />

            <TextView
                android:id="@+id/tv_region"
                style="@style/TextViewData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{country.region}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                tools:text="Region USA" />

            <TextView
                android:id="@+id/tv_capital_label"
                style="@style/TextViewLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/capital"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_region_label" />

            <TextView
                android:id="@+id/tv_capital"
                style="@style/TextViewData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{country.capital}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/tv_region"
                tools:text="Washington" />

            <TextView
                android:id="@+id/tv_currency_label"
                style="@style/TextViewLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_capital_label" />

            <TextView
                android:id="@+id/tv_currency"
                style="@style/TextViewData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{country.currencies[0].name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/tv_capital"
                tools:text="USD" />

            <TextView
                android:id="@+id/tv_time_zone_label"
                style="@style/TextViewLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/time_zone"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_currency_label" />

            <TextView
                android:id="@+id/tv_time_zone"
                style="@style/TextViewData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{country.timezones.toString()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/tv_currency"
                tools:text="-6" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>